[magento 2.2] Added support for 2.2

--- a/composer.json
+++ b/composer.json
@@ -2,8 +2,8 @@
     "name": "razorpay/magento",
     "description": "Razorpay Magento 2.0 plugin for accepting payments.",
     "require": {
-        "php": "~5.5.0|~5.6.0|~7.0.0",
-        "magento/framework": "100.*",
+        "php": "~5.5.0|~5.6.0|^7.0",
+        "magento/framework": "~100.0||~101.0",
         "razorpay/razorpay": "2.*"
     },
     "keywords": [
