--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
-    "name": "razorpay/magento",
-    "description": "Razorpay Magento 2.0 plugin for accepting payments.",
+    "name": "razorpay/magento23",
+    "description": "Razorpay Magento 2.3 plugin for accepting payments.",
     "require": {
-        "php": "~5.5.0|~5.6.0|^7.0",
+        "php": "~7.1.3|^7.2",
         "magento/framework": "~100.0||~101.0",
         "razorpay/razorpay": "2.*"
     },
@@ -23,9 +23,9 @@
         }
     ],
     "support": {
-        "source": "https://github.com/razorpay/razorpay-magento",
+        "source": "https://github.com/kdclabs/razorpay-magento",
         "issues": "https://razorpay.com/support/",
-        "rss": "https://github.com/razorpay/razorpay-magento/releases.atom",
+        "rss": "https://github.com/kdclabs/razorpay-magento/releases.atom",
         "docs":
             "https://docs.razorpay.com/v1/page/integrating-your-magento-store-with-razorpay"
     },
