--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "razorpay/magento23",
+    "name": "rzp/magento",
     "description": "Razorpay Magento 2.3 plugin for accepting payments.",
     "require": {
         "php": "~7.1.3|^7.2",
