--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "description": "Razorpay Magento 2.3 plugin for accepting payments.",
     "require": {
         "php": "~7.1.3|~7.2",
-        "magento/framework": "~100.0||~101.0||~102.0.0",
+        "magento/framework": "~102.0.0",
         "razorpay/razorpay": "2.*"
     },
     "keywords": [
