--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "rzp/magento",
     "description": "Razorpay Magento 2.3 plugin for accepting payments.",
     "require": {
-        "php": "~5.5.0|~5.6.0|^7.0",
+        "php": ""~7.1.3|~7.2"",
         "magento/framework": "~102.0.0",
         "razorpay/razorpay": "2.*"
     },
