--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "require": {
         "php": "~5.5.0|~5.6.0|^7.0",
         "magento/framework": "~102.0.0",
-        "razorpay/razorpay": "2.*"
+        "rzp/rzp-php"
     },
     "keywords": [
         "razorpay",
