--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "name": "razorpay/magento",
     "description": "Razorpay Magento 2.0 plugin for accepting payments.",
+    "version": "2.6.2",
     "require": {
         "php": "~5.5.0|~5.6.0|^7.0",
         "magento/framework": "~102.0.0",
