--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "razorpay/magento",
     "description": "Razorpay Magento 2.0 plugin for accepting payments.",
-    "version": "beta-3.8.0",
+    "version": "3.8.0-beta",
     "require": {
         "php": "~5.5.0|~5.6.0|^7.0",
         "razorpay/razorpay": "2.*"
