--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "description": "Razorpay Magento 2.0 plugin for accepting payments.",
     "version": "3.8.2-beta",
     "require": {
-        "php": "~5.5.0|~5.6.0|^7.0",
+        "php": "~5.5.0|~5.6.0|7.*|^8.0",
         "razorpay/razorpay": "2.*"
     },
     "keywords": [
