--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "razorpay/magento",
     "description": "Razorpay Magento 2.0 plugin for accepting payments.",
-    "version": "3.8.4-beta",
+    "version": "4.0.0",
     "require": {
         "php": "~5.5.0|~5.6.0|7.*|^8.0",
         "razorpay/razorpay": "2.*"
