--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "description": "Razorpay Magento 2.0 plugin for accepting payments.",
     "version": "4.0.1",
     "require": {
-        "php": "~5.5.0|~5.6.0|7.*|^8.1",
+        "php": "7.*|^8.1",
         "razorpay/razorpay": "2.*"
     },
     "keywords": [
