--- a/.github/workflows/magento-unit.yml
+++ b/.github/workflows/magento-unit.yml
@@ -14,5 +14,5 @@ jobs:
     - uses: actions/checkout@v3
     - uses: ./unit-test
       with:
-        source_folder: _test/demo-package
+        source_folder: Tests
         php_version: ${{ matrix.php_version }}
