Updated composer to root directory

--- a/unit-test/action.yml
+++ b/unit-test/action.yml
@@ -14,7 +14,7 @@ inputs:
 
   test_command:
     required: true
-    default: phpunit .
+    default: composer run test
     description: "The test command"
 
   composer_auth:
