--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "require": {
         "php": "7.*|^8.1",
         "razorpay/razorpay": "2.*",
-        "phpunit/phpunit": "9.5.28"
+        "phpunit/phpunit": "^9.5"
     },
     "keywords": [
         "razorpay",
