--- a/composer.json
+++ b/composer.json
@@ -4,8 +4,7 @@
     "version": "4.0.2",
     "require": {
         "php": "7.*|^8.1",
-        "razorpay/razorpay": "2.*",
-        "phpunit/phpunit": "^9.5"
+        "razorpay/razorpay": "2.*"
     },
     "keywords": [
         "razorpay",
@@ -33,7 +32,7 @@
     "homepage": "https://razorpay.com",
     "suggest": {
         "magento/module-checkout-agreements": "100.0.*"
-    },
+    }
     "type": "magento2-module",
     "license": ["MIT"],
     "autoload": {
