--- a/.github/workflows/magento-unit.yml
+++ b/.github/workflows/magento-unit.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
-    - uses: ./unit-test
+    - uses: ./.github/workflows/unit-test
       with:
         source_folder: Tests
         php_version: ${{ matrix.php_version }}
