--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
     "version": "4.0.2",
     "require": {
         "php": "7.*|^8.1",
-        "razorpay/razorpay": "2.*"
+        "razorpay/razorpay": "2.*",
+        "mockery/mockery": "*"
     },
     "keywords": [
         "razorpay",
